k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unyt-app-service 
  namespace: unyt
spec:
  selector:
    app: unyt-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
